8144582: AArch64 does not generate correct branch profile data

Reviewed-by: kvn